# CUDA_GameofLife

./: .gitignore  CMakeLists.txt  README.md  data.txt  firstItr.cu  gol.cu  pattern.rle
